# Odyssean-Engine

./: .gitignore  Odyssean-Engine.sln  README.md  UIEngine.sln
Game/: .clang-format  Game.vcxproj  Game.vcxproj.filters  main.cpp  vcpkg.json
Game/Src/: TestingScene.cpp  TestingScene.h  VulkanScene.cpp  VulkanScene.h  main.cpp
Odyssean-Engine/: CMakeLists.txt  Odyssean-Engine.filters  Odyssean-Engine.vcxproj  vcpkg.json
Odyssean-Engine/Src/: Architecture.txt  main.cpp  pch.h
Odyssean-Engine/Src/Engine/: BaseEngine.h  ECS.cpp  ECS.h  Engine.cpp  Engine.h  ErrorHandling.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Resource.cpp  Resource.h  ResourceManager.h  Scene.h  SceneStateMachine.cpp  TextComponent.cpp  TextComponent.h  Texture.cpp  UtilisationQuery.cpp  UtilisationQuery.h
Odyssean-Engine/Src/Engine/OpenGLAPI/: OpenGLEngine.cpp  OpenGLEngine.h  ShaderOpenGL.cpp  ShaderOpenGL.h
Odyssean-Engine/Src/Engine/VulkanAPI/: DescriptorManager.cpp  ImGuiVulkan.cpp  VulkanEngine.cpp  VulkanInit.cpp  VulkanInit.h
Odyssean-Engine/Src/Engine/VulkanAPI/Helpers/: MeshHelper.cpp  MeshHelper.h  VkRenderHelper.cpp  VkRenderHelper.h
Odyssean-Engine/Src/Engine/VulkanAPI/Types/: BindingData.cpp  BindingData.h  CommandBuffer.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DeviceQueue.cpp  Mesh.cpp  Mesh.h  RenderPassFramebuffer.cpp  RenderPassFramebuffer.h  SubMesh.cpp  SubMesh.h  SyncObjectContainer.cpp  SyncObjectContainer.h  VkContainer.cpp  VulkanMaterial.cpp  VulkanMaterial.h  Window.cpp  Window.h  common.cpp  common.h
Odyssean-Engine/Src/Nodes/: Node.h  Quad.cpp  Quad.h  Tag.cpp  Tag.h  Text.cpp  Text.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h
Odyssean-Engine/Src/Scenes/: TestingScene.h
Odyssean-Game/: Odyssean-Game.vcxproj  Odyssean-Game.vcxproj.filters  vcpkg.json
Odyssean-Game/src/: Odyssean-Game.cpp
Odyssean-Game/src/Scenes/: TestingScene.cpp  VulkanScene.cpp  VulkanScene.h
Resources/Meshes/: material.lib  test.usdz
Resources/Shaders/: CompileShaders.bat  font.frag  font.vert  frag.spv  lit.frag  lit.vert  vert.spv  vulkan.frag  vulkan.vert
Resources/Shaders/compiled/: font_frag.spv  font_vert.spv  lit_frag.spv  lit_vert.spv  vulkan_frag.spv  vulkan_vert.spv
UIEngine/: .clang-format  CMakelists.txt  EngineStart.cpp  ToDo.txt  UITesting.vcxproj  UITesting.vcxproj.filters  imgui.ini  vcpkg.json
UIEngine/Audio/: Audio.cpp  Audio.h
UIEngine/Components/: Camera.h  Quad.h  Text.h  Texture.cpp  Texture.h  Transform.h
UIEngine/Engine/: Components.h  ECS.cpp  ECS.h  EngineStart.cpp  ErrorHandling.h  ImGuiLayer.cpp  ImGuiLayer.h  Renderer2D.cpp  Renderer2D.h  ResourceManager.h  Scene.h  SceneStateMachine.cpp  SceneStateMachine.h  Services.h  Shader.cpp  Shader.h  TextComponent.h  Window.cpp  Window.h  pch.h
UIEngine/Game/: TestingScene.cpp  TestingScene.h
UIEngine/Shaders/: lit.frag  lit.vert
UIEngine/Src/: Engine.cpp  Engine.h  main.cpp  pch.h
UIEngine/Src/Components/: Quad.h  Tag.h  Text.h  Transform.h  Velocity.h
UIEngine/Src/Engine/: Audio.cpp  Audio.h  BaseEngine.h  BaseRenderer.h  Components.h  ECS.cpp  ECS.h  Engine.cpp  Engine.h  ErrorHandling.h  ImGuiLayer.cpp  ImGuiLayer.h  InputManager.cpp  InputManager.h  Nodes.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneStateMachine.cpp  SceneStateMachine.h  Services.cpp  Services.h  Shader.cpp  Shader.h  TextComponent.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h
UIEngine/Src/Engine/OpenGL/: OpenGLEngine.cpp  OpenGLEngine.h  OpenGLRenderer.h
UIEngine/Src/Engine/OpenGLAPI/: OpenGLEngine.cpp  OpenGLEngine.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWindow.cpp  OpenGLWindow.h  ShaderOpenGL.cpp  ShaderOpenGL.h
UIEngine/Src/Engine/Vulkan/: VulkanEngine.cpp  VulkanEngine.h  VulkanLayer.cpp  VulkanLayer.h
UIEngine/Src/Nodes/: Camera.h  Node.cpp  Node.h  Quad.h  Tag.h  Text.h  Transform.h  Velocity.h
UIEngine/Src/Scenes/: TestingScene.cpp  TestingScene.h  VulkanScene.cpp  VulkanScene.h
media/Audio/Desktop/: Master.strings.bank
(+66 files in other folders)
